add a command in README to get Inconsolata font

--- a/README
+++ b/README
@@ -7,3 +7,6 @@ Here are my config files and scripts I wrote
 git clone git://github.com/v0n/dotfiles.git ~/.dotfiles
 cd ~/.dotfiles
 bash install.sh
+
+# You can download and install Inconsolata font with:
+mkdir -p ~/.fonts && wget http://www.levien.com/type/myfonts/Inconsolata.otf -O ~/.fonts/Inconsolata.otf
