--- a/README
+++ b/README
@@ -10,3 +10,5 @@ bash install.sh
 
 # You can download and install Inconsolata font with:
 mkdir -p ~/.fonts && wget http://www.levien.com/type/myfonts/Inconsolata.otf -O ~/.fonts/Inconsolata.otf
+
+# PUSH TEST
